--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,7 @@
+# This is the config for all static variables
+# Format: {ascii_<name_of_variable>}
+# Example: {ascii_<3}, {ascii_*}, {ascii_cross}, e.g.
+#
 # List of unicode symbols: http://www.fileformat.info/info/unicode/index.htm
 <3: \u2764
 "*": \u2605
