--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
     <dependency>
       <groupId>me.HSGamer</groupId>
       <artifactId>BetterGUI</artifactId>
-      <version>1.5-SNAPSHOT</version>
+      <version>1.5</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
