--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>me.hsgamer.bettergui</groupId>
   <artifactId>ASCII-Placeholders</artifactId>
-  <version>1.1</version>
+  <version>1.2</version>
   <packaging>jar</packaging>
 
   <name>ASCII-Placeholders</name>
@@ -85,7 +85,7 @@
     <dependency>
       <groupId>me.HSGamer</groupId>
       <artifactId>BetterGUI</artifactId>
-      <version>3.3</version>
+      <version>4.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
