--- a/pom.xml
+++ b/pom.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>me.hsgamer.bettergui</groupId>
-    <artifactId>addon-parent</artifactId>
-    <version>2.1</version>
-  </parent>
+    <parent>
+        <groupId>me.hsgamer.bettergui</groupId>
+        <artifactId>addon-parent</artifactId>
+        <version>3.0</version>
+    </parent>
 
-  <artifactId>ASCII-Placeholders</artifactId>
-  <version>2.1</version>
-  <packaging>jar</packaging>
+    <artifactId>ASCII-Placeholders</artifactId>
+    <version>3.0</version>
+    <packaging>jar</packaging>
 
-  <name>ASCII-Placeholders</name>
-  <description>Add complex texts as placeholders</description>
+    <name>ASCII-Placeholders</name>
+    <description>Add complex texts as placeholders</description>
 
-  <properties>
-    <project.mainClass>me.hsgamer.bettergui.asciiplaceholders.Main</project.mainClass>
-  </properties>
+    <properties>
+        <project.mainClass>me.hsgamer.bettergui.asciiplaceholders.Main</project.mainClass>
+    </properties>
 
-  <repositories>
-    <repository>
-      <id>codemc-public</id>
-      <url>https://repo.codemc.io/repository/maven-public/</url>
-    </repository>
-  </repositories>
+    <repositories>
+        <repository>
+            <id>codemc-public</id>
+            <url>https://repo.codemc.io/repository/maven-public/</url>
+        </repository>
+    </repositories>
 </project>
